--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <div class="coaches-grid">
                 <div class="coach-card slide-in-left">
                     <div class="coach-image">
-                        <img src="umar/WhatsApp Image 2025-06-28 at 23.46.49.jpeg" alt="Head Coach" loading="lazy">
+                        <img src="WhatsApp Image 2025-06-28 at 23.46.49.jpeg" alt="Head Coach" loading="lazy">
                     </div>
                     <div class="coach-info">
                         <h3>Coach Ahmed</h3>
@@ -210,7 +210,7 @@
                 </div>
                 <div class="coach-card slide-in-right">
                     <div class="coach-image">
-                        <img src="umar/WhatsApp Image 2025-06-28 at 23.46.51.jpeg" alt="Assistant Coach" loading="lazy">
+                        <img src="WhatsApp Image 2025-06-28 at 23.46.51.jpeg" alt="Assistant Coach" loading="lazy">
                     </div>
                     <div class="coach-info">
                         <h3>Coach Omar</h3>
@@ -221,7 +221,7 @@
                 </div>
                 <div class="coach-card slide-in-left">
                     <div class="coach-image">
-                        <img src="umar/WhatsApp Image 2025-06-28 at 23.46.55.jpeg" alt="Goalkeeper Coach" loading="lazy">
+                        <img src="WhatsApp Image 2025-06-28 at 23.46.55.jpeg" alt="Goalkeeper Coach" loading="lazy">
                     </div>
                     <div class="coach-info">
                         <h3>Coach Khalid</h3>
@@ -232,7 +232,7 @@
                 </div>
                 <div class="coach-card slide-in-right">
                     <div class="coach-image">
-                        <img src="umar/WhatsApp Image 2025-06-28 at 23.47.01.jpeg" alt="Fitness Coach" loading="lazy">
+                        <img src="WhatsApp Image 2025-06-28 at 23.47.01.jpeg" alt="Fitness Coach" loading="lazy">
                     </div>
                     <div class="coach-info">
                         <h3>Coach Hassan</h3>
@@ -287,18 +287,18 @@
                     <h3>Player Success Stories</h3>
                     <div class="success-stories">
                         <div class="story-card">
-                            <div class="story-image">
-                                <img src="umar/WhatsApp Image 2025-06-28 at 23.47.49.jpeg" alt="Success Story 1" loading="lazy">
-                            </div>
+                                                    <div class="story-image">
+                            <img src="WhatsApp Image 2025-06-28 at 23.47.49.jpeg" alt="Success Story 1" loading="lazy">
+                        </div>
                             <div class="story-content">
                                 <h4>Mohammed Al-Rashid</h4>
                                 <p>From UC10 youth program to professional debut at age 18. Now playing for top division club.</p>
                             </div>
                         </div>
                         <div class="story-card">
-                            <div class="story-image">
-                                <img src="umar/WhatsApp Image 2025-06-28 at 23.47.50.jpeg" alt="Success Story 2" loading="lazy">
-                            </div>
+                                                    <div class="story-image">
+                            <img src="WhatsApp Image 2025-06-28 at 23.47.50.jpeg" alt="Success Story 2" loading="lazy">
+                        </div>
                             <div class="story-content">
                                 <h4>Sarah Al-Zahra</h4>
                                 <p>UC10 women's program graduate who represented her country in international competitions.</p>
@@ -441,7 +441,7 @@
             <div class="testimonials-grid">
                 <div class="testimonial-card fade-in">
                     <div class="testimonial-image">
-                        <img src="umar/WhatsApp Image 2025-06-28 at 23.47.51.jpeg" alt="Player Testimonial" loading="lazy">
+                        <img src="WhatsApp Image 2025-06-28 at 23.47.51.jpeg" alt="Player Testimonial" loading="lazy">
                     </div>
                     <div class="testimonial-content">
                         <div class="stars">
@@ -458,7 +458,7 @@
                 </div>
                 <div class="testimonial-card fade-in">
                     <div class="testimonial-image">
-                        <img src="umar/WhatsApp Image 2025-06-28 at 23.47.52.jpeg" alt="Player Testimonial" loading="lazy">
+                        <img src="WhatsApp Image 2025-06-28 at 23.47.52.jpeg" alt="Player Testimonial" loading="lazy">
                     </div>
                     <div class="testimonial-content">
                         <div class="stars">
@@ -475,7 +475,7 @@
                 </div>
                 <div class="testimonial-card fade-in">
                     <div class="testimonial-image">
-                        <img src="umar/WhatsApp Image 2025-06-28 at 23.47.53.jpeg" alt="Player Testimonial" loading="lazy">
+                        <img src="WhatsApp Image 2025-06-28 at 23.47.53.jpeg" alt="Player Testimonial" loading="lazy">
                     </div>
                     <div class="testimonial-content">
                         <div class="stars">
@@ -492,7 +492,7 @@
                 </div>
                 <div class="testimonial-card fade-in">
                     <div class="testimonial-image">
-                        <img src="umar/WhatsApp Image 2025-06-28 at 23.47.54.jpeg" alt="Player Testimonial" loading="lazy">
+                        <img src="WhatsApp Image 2025-06-28 at 23.47.54.jpeg" alt="Player Testimonial" loading="lazy">
                     </div>
                     <div class="testimonial-content">
                         <div class="stars">
